longhorn/longhorn-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: longhorn
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - longhorn.raft.lutris.house
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
